# nano-os

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  link.ld  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.claude/: settings.json  wait-qemu.py
backlog/: allocator_sync_safety.md  cache-stampede.md  dir-type-for-cwd.md  ext2-arc-superblock.md  ext2_lookup_error_mapping.md  ext2_test_coverage.md  file_close.md  filtered_message_receive.md  missing_debug_impls.md  read_write_ramfs.md  refcell_ramfs.md  safety-comment-audit.md  sd-4bit-mode.md  static_mut_to_mutex.md  thread-to-task-refactor.md  trace_syscalls_panic.md
bootdata/: boot.its  sg2002.dtb
cpu_types/: Cargo.toml
design/: block-device-design.md  kernel-threads-architecture.md  vfs-design.md
ext2img/: Dockerfile
gdb/: Dockerfile  blockdevs.py  qemu-init.txt
initramfs/: Dockerfile
notes/: block-device-devfs.md  boot-stages.md  coding-style.md  ext2-data-structures.md  ext2-ondisk-format.md  filesystem-naming.md  kernel-threads-architecture.md  nano.dtb  planning-workflow.md  qemu.dtb  rust-trait-checklist.md  sd-card-partitioning.md  testing-strategy.md  thead-c906-memory-guide.md  threading-and-process-management.md  vfs-design.md
prog_example/: Cargo.toml  Dockerfile  Makefile
ref/: TRAP_TYPES.md  coding-style.md  driver-constant-naming.md  ext2-ondisk-format.md  ext3-write-operations.md  hardware-shared-buffer-alignment.md  memory-map.md  nano.dtb  rust-trait-checklist.md
sdimg/: Dockerfile
src/: amo.rs  asm_offsets.rs  bytes.rs  chardev.rs  console.rs  cpu.rs  (+31 more)
(+80 files in other folders)
