[package]
name = "nano-os"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
heapless = "0.8.0"
cpu_types = { path = "cpu_types" }

[profile.dev]
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
panic = "unwind"

[profile.release]
panic = "abort"

[[bin]]
name = "kernel"
path = "src/main.rs"

[features]
print_dtb = []
page_allocator_debug = []

[build-dependencies]
memoffset = "0.9"
cpu_types = { path = "cpu_types" }
